Fix meta og image

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="ShiftSwap: A Scheduling App for Shift Workers" />
     <meta property="og:description" content="ShiftSwap was created to answer the need for an easy to use and easy to share system for creating schedules in industries with shift workers." />
     <meta property="og:url" content="http://shiftswapforsues.herokuapp.com" />
-    <meta property="og:image" content="./app/img/MGRview-full-ogimg.png" />
+    <meta property="og:image" content="http://shiftswapforsues.herokuapp.com/app/img/MGRview-full-ogimg.png" />
 
     <title>ShiftSwap</title>
     <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase.js"></script>
