--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
+    <link rel="shortcut icon" href="./app/img/SSicon16.ico" type="image/x-icon" >
     <meta charset="utf-8">
     <meta http-equiv="Content-Language" content="en-US">
     <meta name="viewport" content="width=device-width, initial-scale=1">
